# assignment-15-12

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  dockerfile  pyproject.toml
prometheus/: prometheus.yaml
src/: startup_script.py
src/app/: main.py
src/ml_model/: ml_model.py
src/sql_app/: database.py  interface.py  models.py  schemas.py
tests/: test_app.py
